--- a/src/App.scss
+++ b/src/App.scss
@@ -1,19 +1,16 @@
 .App {
-    display: grid;
+  background: #CCA43B;
 
-    grid-template-areas:
+  display: grid;
+
+  grid-template-areas:
   'header header'
   'navbar content';
 
-    grid-template-rows: 50px 1fr;
-    grid-template-columns: 2fr 10fr;
-    /*grid-gap: 10px;*/
+  grid-template-rows: 50px 1fr;
+  grid-template-columns: 2fr 10fr;
+  grid-gap: 10px;
 }
-
-
-
-
-
 
 
 /*#E5E5E5*/
